<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.soam.SignUpActivity"
    tools:showIn="@layout/activity_sign_up">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fab"
                android:clickable="true"
                android:src="@drawable/ic_add_a_photo_white_18dp"
                app:layout_anchorGravity="bottom|end"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_picture"
                    android:textColor="@color/colorPrimary"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textStyle="bold"
                    fontPath="montserrat/Montserrat-SemiBold.otf"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_picture"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

            </LinearLayout>

        </LinearLayout>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:padding="@dimen/activity_vertical_margin"
            android:background="@drawable/background_edittext"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:hint="@string/sign_name"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:padding="@dimen/activity_vertical_margin"
            android:background="@drawable/background_edittext"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:hint="@string/sign_email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:padding="@dimen/activity_vertical_margin"
            android:background="@drawable/background_edittext"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:hint="@string/sign_phone"
            android:inputType="phone"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:padding="@dimen/activity_vertical_margin"
            android:background="@drawable/background_edittext"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:inputType="textPassword"
            android:hint="@string/sign_password"/>

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:padding="@dimen/activity_vertical_margin"
            android:background="@drawable/background_edittext"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:inputType="textPassword"
            android:hint="@string/sign_confirm_password"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_creating"
            android:textSize="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

        <TextView
            android:id="@+id/terms_of_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:textSize="10dp"
            android:text="@string/terms_of_service"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            fontPath="montserrat/Montserrat-SemiBold.otf"/>

    </LinearLayout>

    <Button
        android:id="@+id/create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button"
        android:textColor="@android:color/white"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textStyle="bold"
        fontPath="montserrat/Montserrat-Bold.otf"/>

</LinearLayout>
