<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.soam.SignInActivity"
    tools:showIn="@layout/activity_sign_in">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:padding="@dimen/activity_vertical_margin"
            android:background="@drawable/background_edittext"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:hint="@string/sign_email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:padding="@dimen/activity_vertical_margin"
            android:background="@drawable/background_edittext"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:inputType="textPassword"
            android:hint="@string/sign_password"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:clickable="true"
            android:text="@string/forgot_password"
            android:textSize="10dp"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            fontPath="montserrat/Montserrat-Regular.otf"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <Button
                android:id="@+id/sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:text="@string/sign_in"
                android:textAllCaps="true"
                fontPath="montserrat/Montserrat-Regular.otf"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/dont_have_account"
                    android:textSize="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

                <TextView
                    android:id="@+id/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:clickable="true"
                    android:text="@string/sign_up"
                    android:textSize="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    fontPath="montserrat/Montserrat-Regular.otf"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
